--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
         <article>
             <section class="flex info-wrapper ">
                 <div class="intro">
-                    <h1>Web Developer and MERN Stack Developer</h1>
-                    <p>I am a passionate web developer with expertise in the MERN stack. Curious about everything in the
-                        tech world.</p>
+                    <h1>Web Developer | MERN Stack Enthusiast</h1>
+                    <p>I'm Magdum, a passionate web developer skilled in the MERN stack. I specialize in creating dynamic
+                        and user-friendly web applications.</p>
                     <div class="flex gap-2rem">
                         <a href="#contact-me-section" class="button">Contact Me</a>
-                        <a href="assets/Magdum_Pirjade_Resume.pdf"  download="Magdum_Pirjade_Resume" class="download-btn">Download Resume</a>
+                        <a href="assets/Magdum_Pirjade_Resume.pdf" download="Magdum_Pirjade_Resume"
+                            class="download-btn">Download Resume</a>
                     </div>
                 </div>
                 <!-- <div class="image-container">
@@ -196,16 +197,17 @@
                     </figure>
                 </div>
                 <div class="certificate hackerrank">
-                    <title>Python</title>
+                    <title>Java</title>
                     <figure class="snip1543">
-                        <img src="certificates/hackerrank-java-certificate.png" alt="Python Certificate">
+                        <img src="certificates/hackerrank-java-certificate.png" alt="Java Certificate">
                         <figcaption>
-                            <h3>Python Basics</h3>
-                            <p>Completed a foundational Python course, establishing fundamental skills for application
-                                development.</p>
+                            <h3>Java Basics</h3>
+                            <p>Successfully completed the HackerRank Java Basics test, demonstrating foundational skills
+                                for application development.</p>
                         </figcaption>
                     </figure>
                 </div>
+
 
             </div>
 
