--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magdum Portfolio</title>
+    <link rel="icon" type="assets/image-x" href="/assets/favicon.png">
     <link rel="stylesheet" href="styles.css">
     <script defer src="index.js"></script>
     <script src="https://kit.fontawesome.com/3b161c540c.js" crossorigin="anonymous"></script>
@@ -41,7 +42,7 @@
     <main>
         <article>
             <section class="flex info-wrapper " id="about">
-                <div class="intro">
+                <div class="intro hidden">
                     <h1>Web Developer | MERN Stack Enthusiast</h1>
                     <p>I'm Magdum, a passionate web developer skilled in the MERN stack. I specialize in creating
                         dynamic
