--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magdum Portfolio</title>
-    <link rel="icon" type="assets/image-x" href="/assets/favicon.png">
     <link rel="stylesheet" href="styles.css">
     <script defer src="index.js"></script>
     <script src="https://kit.fontawesome.com/3b161c540c.js" crossorigin="anonymous"></script>
@@ -42,7 +41,7 @@
     <main>
         <article>
             <section class="flex info-wrapper " id="about">
-                <div class="intro hidden">
+                <div class="intro">
                     <h1>Web Developer | MERN Stack Enthusiast</h1>
                     <p>I'm Magdum, a passionate web developer skilled in the MERN stack. I specialize in creating
                         dynamic
@@ -278,5 +277,8 @@
         </div>
     </footer>
 </body>
+<!-- analytics script -->
+<script async defer src="https://magdum.me/latest.js"></script>
+<noscript><img src="https://magdum.me/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 
 </html>
