--- a/index.html
+++ b/index.html
@@ -276,9 +276,9 @@
             </div>
         </div>
     </footer>
+    <!-- 100% privacy-first analytics -->
+    <script async defer src="https://magdum.me/latest.js"></script>
+    <noscript><img src="https://magdum.me/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </body>
-<!-- analytics script -->
-<script async defer src="https://magdum.me/latest.js"></script>
-<noscript><img src="https://magdum.me/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 
 </html>
