refactor : add animation to container instead image

--- a/index.html
+++ b/index.html
@@ -64,30 +64,30 @@
             <h3>Projects
             </h3>
             <div class=" grid projects-container">
-                <a target="_blank" class="project-link" href="https://github.com/pirjademl/Examination_Portal">
-                    <div class="project hidden">
+                <a target="_blank" class="project-link hidden" href="https://github.com/pirjademl/Examination_Portal">
+                    <div class="project ">
                         <img src="assets/Online test-bro.png" alt="Online Examination">
                         <h4>Examination Portal</h4>
                         <p>React,redux,Nodejs,express,MongoDB,mongoose</p>
 
                     </div>
                 </a>
-                <a target="_blank" class="project-link" href="https://github.com/pirjademl/">
-                    <div class="project hidden">
+                <a target="_blank" class="project-link hidden" href="https://github.com/pirjademl/">
+                    <div class="project ">
                         <img src="assets/Vaccine development-rafiki.png" alt="">
                         <h4>Vaccine Management</h4>
                         <p>Java, Mysql,JDBC,Html,css,Javscript</p>
                     </div>
                 </a>
-                <a target="_blank" class="project-link" href="https://github.com/pirjademl/job-Dekho">
-                    <div class="project hidden">
+                <a target="_blank" class="project-link hidden" href="https://github.com/pirjademl/job-Dekho">
+                    <div class="project ">
                         <img src="assets/Job hunt-amico.png" alt="">
                         <h4>Job Portal</h4>
                         <p>Java,Mysql,Jdbc,html,css,javascript</p>
                     </div>
                 </a>
-                <a target="_blank" class="project-link" href="https://github.com/pirjademl/Internship_Assignment">
-                    <div class="project hidden">
+                <a target="_blank" class="project-link hidden" href="https://github.com/pirjademl/Internship_Assignment">
+                    <div class="project ">
                         <img src="assets/Book lover-rafiki.png" alt="">
                         <h4>Book Management RESTful API</h4>
                         <p>Nodejs,Express,JWT,MongoDB,bcrypt</p>
