chore : replace new gtag manager script

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="styles.css">
     <script defer src="index.js"></script>
     <script src="https://kit.fontawesome.com/3b161c540c.js" crossorigin="anonymous"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3VCNHC3HPK"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGE4WDJK43"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-3VCNHC3HPK');
+        gtag('config', 'G-DGE4WDJK43');
     </script>
 </head>
 
@@ -94,7 +95,8 @@
                         <p>Java,Mysql,Jdbc,html,css,javascript</p>
                     </div>
                 </a>
-                <a target="_blank" class="project-link hidden" href="https://github.com/pirjademl/Internship_Assignment">
+                <a target="_blank" class="project-link hidden"
+                    href="https://github.com/pirjademl/Internship_Assignment">
                     <div class="project ">
                         <img src="assets/Book lover-rafiki.png" alt="">
                         <h4>Book Management RESTful API</h4>
